--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.93.0",
+    "@react-three/fiber": "^8.15.14",
     "framer-motion": "^10.18.0",
     "gsap": "^3.12.4",
     "next": "14.0.4",
@@ -16,7 +18,9 @@
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.5.3",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "three": "^0.160.0",
+    "three-spritetext": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
