--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.5.3",
+    "react-spinners": "^0.13.8",
     "styled-components": "^6.1.8",
     "three": "^0.160.0",
     "three-spritetext": "^1.8.1"
