--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@react-three/drei": "^9.93.0",
     "@react-three/fiber": "^8.15.14",
+    "@tsparticles/all": "^3.8.1",
+    "@tsparticles/engine": "^3.8.1",
+    "@tsparticles/react": "^3.0.0",
     "framer-motion": "^10.18.0",
     "gsap": "^3.12.4",
     "next": "14.0.4",
@@ -19,9 +22,11 @@
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.5.3",
     "react-spinners": "^0.13.8",
+    "react-tsparticles": "^2.12.2",
     "styled-components": "^6.1.8",
     "three": "^0.160.0",
-    "three-spritetext": "^1.8.1"
+    "three-spritetext": "^1.8.1",
+    "tsparticles": "^3.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
