--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -16,9 +16,9 @@
     "@tsparticles/react": "^3.0.0",
     "framer-motion": "^10.18.0",
     "gsap": "^3.12.4",
-    "next": "14.0.4",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "15.3.3",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.5.3",
     "react-spinners": "^0.13.8",
@@ -30,12 +30,16 @@
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "19.1.6",
+    "@types/react-dom": "19.1.6",
     "@types/styled-components": "^5.1.34",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.1.6",
+    "@types/react-dom": "19.1.6"
   }
 }
