--- a/package.json
+++ b/package.json
@@ -9,37 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-three/drei": "^9.93.0",
-    "@react-three/fiber": "^8.15.14",
-    "@tsparticles/all": "^3.8.1",
-    "@tsparticles/engine": "^3.8.1",
-    "@tsparticles/react": "^3.0.0",
-    "framer-motion": "^10.18.0",
-    "gsap": "^3.12.4",
+    "framer-motion": "^12.16.0",
+    "gsap": "^3.13.0",
     "next": "15.3.3",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-icons": "^4.12.0",
-    "react-intersection-observer": "^9.5.3",
-    "react-spinners": "^0.13.8",
-    "react-tsparticles": "^2.12.2",
-    "styled-components": "^6.1.8",
-    "three": "^0.160.0",
-    "three-spritetext": "^1.8.1",
-    "tsparticles": "^3.8.1"
+    "react": "^19.0.0",
+    "react-countup": "^6.5.3",
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.8",
     "@types/node": "^20",
-    "@types/react": "19.1.6",
-    "@types/react-dom": "19.1.6",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "@types/styled-components": "^5.1.34",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.4",
+    "tailwindcss": "^4.1.8",
     "typescript": "^5"
-  },
-  "overrides": {
-    "@types/react": "19.1.6",
-    "@types/react-dom": "19.1.6"
   }
 }
